# poo1_sp6_2020_2_template

./: CMakeLists.txt  README.md  p1.h  p2.h  p3.h  run.sh  test_1.in  test_2.in  test_3.in
